--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,109 @@
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+
+@font-face {
+  font-family: "yekanBakhRegular";
+  src: url("/fonts/YekanBakhFaNum-Regular.woff2") format("woff2");
+  font-weight: 400;
+  font-style: normal;
 }
 
-@theme inline {
+@font-face {
+  font-family: "yekanBakhLight";
+  src: url("/fonts/YekanBakhFaNum-Light.woff2") format("woff2");
+  font-weight: 300;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "yekanBakhSemiBold";
+  src: url("/fonts/YekanBakhFaNum-SemiBold.woff2") format("woff2");
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "yekanBakhBold";
+  src: url("/fonts/YekanBakhFaNum-Bold.woff2") format("woff2");
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "yekanBakhExtraBold";
+  src: url("/fonts/YekanBakhFaNum-ExtraBold.woff2") format("woff2");
+  font-weight: 800;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "yekanBakhExtraBlack";
+  src: url("/fonts/YekanBakhFaNum-ExtraBlack.woff2") format("woff2");
+  font-weight: 900;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "yekanBakhBlack";
+  src: url("/fonts/YekanBakhFaNum-Black.woff2") format("woff2");
+  font-weight: 950;
+  font-style: normal;
+}
+
+.font-yekanBakhRegular {
+  font-family: "yekanBakhRegular", sans-serif;
+}
+
+.font-yekanBakhLight {
+  font-family: "yekanBakhLight",
+    sans-serif;
+}
+
+.font-yekanBakhSemiBold {
+  font-family: "yekanBakhSemiBold",
+    sans-serif;
+}
+
+.font-yekanBakhBold {
+  font-family: "yekanBakhBold",
+    sans-serif;
+}
+
+.font-yekanBakhExtraBold {
+  font-family: "yekanBakhExtraBold",
+    sans-serif;
+}
+
+.font-yekanBakhExtraBlack {
+  font-family: "yekanBakhExtraBlack",
+    sans-serif;
+}
+
+.font-yekanBakhBlack {
+  font-family: "yekanBakhBlack",
+    sans-serif;
+}
+
+/* @theme inline {
+
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
+} */
 
+/* :root {
+  --background: #ffffff;
+  --foreground: #171717;
+} */
+
+/* 
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
   }
-}
-
+} */
+/* 
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
-}
+} */
